# manx

./: .gitignore  AI_FEATURES.md  COMMANDS.md  Cargo.toml  EMBEDDING_SETUP.md  GITHUB_RELEASE_0.5.4.md  LICENSE  NEURAL_SEARCH.md  RAG_GUIDE.md  README.md  RELEASE_NOTES_v0.4.4.md  SIMPLE_EMBEDDING_SETUP.md  about_manx.md  improved_wizard_demo.md  install.sh  test_hf_embeddings.py  test_wizard_flow.md
.claude/agents/: rust-warning-eliminator.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: AI_FEATURES.md  COMMANDS.md  CONFIGURATION.md  EMBEDDING_SETUP.md  NEURAL_SEARCH.md  RAG_GUIDE.md  README.md  SETUP_GUIDE.md  SIMPLE_EMBEDDING_SETUP.md  about_manx.md  astro.config.mjs
docs/src/components/: FeedbackDialog.astro
docs/src/content/docs/: api-keys.md  cache.md  changelog.md  commands.mdx  configuration.md  contributing.md  examples.mdx  getting-started.md  index.mdx  installation.mdx  performance.md  troubleshooting.md
docs/src/styles/: custom.css
examples/: benchmark_hash.rs  benchmark_onnx_vs_hash.rs  test_onnx_download.rs
src/: cache.rs  cli.rs  client.rs  config.rs  export.rs  http_client.rs  lib.rs  main.rs  render.rs  search.rs  update.rs
src/rag/: benchmarks.rs  embeddings.rs  indexer.rs  llm.rs  mod.rs  model_metadata.rs  query_enhancer.rs  result_verifier.rs  search_engine.rs
src/rag/providers/: custom.rs  hash.rs  huggingface.rs  mod.rs  ollama.rs  onnx.rs  openai.rs
src/web_search/: llm_verifier.rs  mod.rs  official_sources.rs  query_analyzer.rs  result_processor.rs  search_engine.rs
src/wizard/: mod.rs  navigation.rs  prompts.rs  themes.rs  validators.rs
src/wizard/steps/: context7.rs  embeddings.rs  llm.rs  mod.rs  summary.rs  welcome.rs
test_docs/: python_guide.md  react_guide.md
tests/: benchmark_embeddings.rs
