[package]
name = "manx-cli"
version = "0.3.5"
edition = "2021"
authors = ["neur0map <email@example.com>"]
description = "A blazing-fast CLI documentation finder powered by Context7 MCP"
homepage = "https://github.com/neur0map/manx"
repository = "https://github.com/neur0map/manx"
license = "MIT"
readme = "README.md"
keywords = ["cli", "documentation", "mcp", "context7", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "manx"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client with SSE support
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-client = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "2.1"
indicatif = "0.17"
termsize = "0.1"

# Fuzzy matching
fuzzy-matcher = "0.3"

# System paths
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (optional, for debug mode)
env_logger = "0.11"
log = "0.4"

[profile.release]
# Optimize for small binary size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-debug]
# For debugging production builds
inherits = "release"
strip = false
debug = true
