[package]
name = "manx-cli"
version = "0.5.4"
edition = "2021"
authors = ["neur0map <neur0map@prowl.sh>"]
description = "A blazing-fast CLI documentation finder powered by Context7 MCP"
homepage = "https://github.com/neur0map/manx"
repository = "https://github.com/neur0map/manx"
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "documentation", "mcp", "context7", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "target/",
    "*.onnx",
    "*.bin",
    "*.safetensors",
    "*.mp4",
    "*.mov", 
    "*.avi",
    ".github/",
    "docs/",
    "*.log",
    "debug/",
    ".DS_Store",
    ".vscode/",
    ".idea/",
]

[lib]
name = "manx_cli"
path = "src/lib.rs"

[[bin]]
name = "manx"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# HTTP client with SSE support
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-client = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "2.1"
indicatif = "0.17"
termsize = "0.1"

# Fuzzy matching
fuzzy-matcher = "0.3"

# System paths
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (optional, for debug mode)
env_logger = "0.11"
log = "0.4"

# Interactive CLI for wizard
dialoguer = "0.11"
console = "0.15"
spinoff = "0.8"
webbrowser = "1.0"

# Web search dependencies
scraper = "0.18"
url = "2.4"
urlencoding = "2.1"
regex = "1.10"

# Web crawling - Documentation-optimized crawler
docrawl = "0.1.1"

# RAG dependencies for document processing and vector storage  
docx-rs = "0.4"
walkdir = "2.4"
num_cpus = "1.16"
gag = "1"
libc = "0.2"

# File-based vector storage
uuid = { version = "1.6", features = ["v4"] }

# LRU cache for embedding optimization
lru = "0.12"

# Embedding model dependencies  
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "copy-dylibs"], optional = true }
sha2 = "0.10"
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.15", optional = true }
base64 = "0.22"
bytes = "1.5"
async-trait = "0.1"
dirs = "5.0"

[features]
default = ["onnx-embeddings"]
onnx-embeddings = ["ort", "hf-hub", "tokenizers"]

[profile.release]
# Optimize for small binary size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-debug]
# For debugging production builds
inherits = "release"
strip = false
debug = true
